tp_group_mixin_get_members etc.: remove accessors for members

tp_group_mixin_get_local_pending_members_with_info() uses a dbus-glib
data type, and none of these are actually used in the five core CMs
(they all track members separately in any case).
Make them private if used in the implementation, or remove them entirely.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=77190
Reviewed-by: Xavier Claessens